--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Pet rescue</title>
   <link rel="stylesheet" href="main.css" type="text/css">
   </head>
   <body>
 
    <div id="map"></div>
-   <div class="search">
+   <div class="container">
     <form action="#">
       <input type="text" id="zip-search" name="zip-search" placeholder="Enter your zip">
-      <button type="submit"class="search-button">Search</button>
+      <button type="submit" id="submit-zip">Search</button>
     </form>
-   </div>
+  </div>
 
-   <div id="locations"></div>
+   <ul id="locations"></ul>
 
 
 
@@ -24,6 +24,9 @@
   crossorigin="anonymous"></script>
 
   <script src="app.js" type="text/javascript"></script>
+
+ <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTiHsLVdIYwxewDERbrbR2sqgUOSsyMo0&callback=initMap"
+  type="text/javascript"></script>
 
   </body>
 </html>
