shelter list info+styling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       </div>
 
     </div>
-
+  <div class="row">
+    <div id="locations"></div>
+  <div>
 
 
 <script src="https://code.jquery.com/jquery-3.1.1.js"
