--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 
     <div id="map"></div>
 
+
     <div class="row">
 
-      <div class="container-form">
+      <div class="container-form col-3">
 
-        <form action="#">
+        <form action="#" >
 
-            <label id="zip-label" for="zip-search">Find Pet Shelters Near You</label>
+            <label id="zip-label" for="zip-search">Find Pet Shelters Near You!</label>
 
-            <input type="text" id="zip-search" name="zip-search" placeholder="Enter your zip!">
+            <input type="text" id="zip-search" name="zip-search" placeholder="Enter your zip">
 
             <button type="submit" id="submit-zip">Search</button>
 
@@ -28,7 +29,7 @@
 
     </div>
 
-  <div id="locations"></div>
+
 
 
 <script src="https://code.jquery.com/jquery-3.1.1.js"
